# parties

./: .dockerignore  .gitignore  CMakeLists.txt
.github/workflows/: release.yml
client/: CMakeLists.txt
client/include/client/: app_core.h  chat_model.h  lobby_model.h  server_list_model.h
client/res/: Info.plist.in
client/src/: app_core.cpp  chat_model.cpp  net_client_msquic.cpp  server_list_model.cpp  sound_player.cpp  stream_audio_player.cpp  voice_mixer.cpp
client/src/macos/: app_macos.mm  auto_updater_macos.mm  screen_capture_macos.h  screen_capture_macos.mm
client/src/metal/: RmlUi_Backend_macOS_Metal.h  RmlUi_Backend_macOS_Metal.mm  RmlUi_Renderer_Metal.h  RmlUi_Renderer_Metal.mm
client/ui/: lobby.rml  style.rcss
common/include/parties/: audio_common.h  crypto.h  permissions.h  plugin_api.h  protocol.h
common/src/: crypto.cpp  log.cpp  permissions.cpp
docs/: analysis-backlog.md  bot-query-input-api.md  plugin-api-plan.md  plugins.md  protocol-migration-2026-06.md
encdec/include/encdec/apple/: video_encoder_macos.h
encdec/src/apple/: video_encoder_macos.mm
examples/plugins/bot_echo/: CMakeLists.txt  bot_echo.cpp
sdk/: CMakeLists.txt
sdk/include/parties/: plugin_api.h
server/: CMakeLists.txt
server/include/server/: config.h  database.h  plugin_manager.h  quic_server.h  server.h  session.h
server/res/: server.default.toml
server/src/: config.cpp  database.cpp  plugin_manager.cpp  quic_server.cpp  server.cpp
tests/: CMakeLists.txt  integration_test.cpp  plugin_policy_test.cpp
